refactor: adicionando formatação de cpf e telefone em quanto o usuario digita, tirando tag script dentro do html e separando em um arquivo js

--- a/base_templates/global/pages/base_painel_adm.html
+++ b/base_templates/global/pages/base_painel_adm.html
@@ -1,4 +1,5 @@
 {% include 'global/partials/head_page_adm.html' %}
+    {% block additional_tags %}{% endblock additional_tags %}
     <title>{% block title %}{% endblock title %}</title>
 </head>
 
