--- a/base_templates/global/pages/base_page_form.html
+++ b/base_templates/global/pages/base_page_form.html
@@ -1,4 +1,5 @@
 {% include 'global/partials/head_page_form.html' %}
+    {% block additional_tags %}{% endblock additional_tags %}
     <title>{% block title %}{% endblock title %}</title>
 </head>
 
